# groonga-plugin-help

./: Makefile.am  configure.ac  help.rb  ruby_scripts.am
help/: Makefile.am  help.c  sources.am
help_mruby/: Makefile.am  help_mruby.rb  sources.am
test/: run-test.sh
test/suite/: default_encoding.expected  default_encoding.test  help.actual  help.test  help_mruby.actual  help_mruby.test
